--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="search_hint">Search Kabegami 壁紙 here</string>
     <string name="appName">SekaiSheet</string>
     <string name="wallpaperImage">Wallpaper Image</string>
-    <string name = "wallpaperSetSuccessfully"> Wallpaper Set Successfully ❤️</string>
+    <string name="settingUpTitle">Wallpaper is processing 🥳 </string>
+    <string name="settingUpWallpaper">Your highQuality wallpaper is under process to set please hold a little to enjoy 🙃 ❤️.</string>
+    <string name="wallpaperSetSuccessfully"> Wallpaper Set Successfully ❤️</string>
 </resources>
