--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="settingUpTitle">Wallpaper is processing 🥳 </string>
     <string name="settingUpWallpaper">Your highQuality wallpaper is under process to set please hold a little to enjoy 🙃 ❤️.</string>
     <string name="wallpaperSetSuccessfully"> Wallpaper Set Successfully ❤️</string>
+    <string name="search">Search Wallpapers </string>
+    <string name="searchWallpapers">Search any wallpapers 壁紙 </string>
 </resources>
