refracted shimmer effect

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="amoled">Amoled</string>
     <string name="games">Games</string>
     <string name="nature">Nature</string>
+    <string name="chooseRandomText">PickUp you Wallpaper  types of the day </string>
     <string name="_abstract">Abstract</string>
 </resources>
